fixed(http、nav): api timeout not show message & perf nav z-index

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -95,7 +95,7 @@ label {
 
 .header {
   position: fixed;
-  z-index: 1;
+  z-index: 9;
   top: 0;
   left: 0;
   width: 100%;
